complete faq and metadata checklist page content

--- a/app/assets/stylesheets/components/_community.scss
+++ b/app/assets/stylesheets/components/_community.scss
@@ -11,7 +11,25 @@ img.community-logo {
   max-width: 200px;
 }
 
-.list-content {
+.normal-size-text {
   font-size: 18px;
   line-height: 1.5em;
+}
+
+.bold-text {
+  font-weight: bold;
+}
+
+.question-text {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+code {
+  font-size: 14px;
+}
+
+.code-block {
+  color: #c7254e;
+  font-size: 14px;
 }
