--- a/app/views/pages/contributor.html.erb
+++ b/app/views/pages/contributor.html.erb
@@ -10,7 +10,7 @@
        on the Digital Cicognara Library website.
     </p>
     <p>
-      <ul class="list-content">
+      <ul class="normal-size-text">
         <li>
           For detailed information on how to contribute to the Digital Cicognara Library
           see the <%= link_to "contributor FAQs", static_page_path('faq') %> page or contact
