--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -1,6 +1,20 @@
 <section class="partners" id="partners">
   <div class="wrap">
     <h1>Charter Partners</h1>
-    <p>The charter partners in The Digital Cicognara Library initiative include: Biblioteca Apostolica Vaticana, Columbia University Library, Frick Art Reference Library, Getty Research Institute, Harvard University Library, Heidelberg University Library, National Gallery of Art Library, Princeton University Library, and University of Illinois at Urbana-Champaign Library. The current partners, excluding the Vatican, collectively hold approximately fifty percent of the corpus of more than five thousand titles and are actively seeking new partners to complete the collection of matching editions.</p>
+    <p>
+      The charter partners in The Digital Cicognara Library initiative include:
+      <%= link_to "Biblioteca Apostolica Vaticana", "https://www.vatlib.it/home.php" %>,
+      <%= link_to "Columbia University Library", "http://library.columbia.edu/" %>,
+      <%= link_to "Frick Art Reference Library", "http://www.frick.org/research/library" %>,
+      <%= link_to "Getty Research Institute", "https://www.getty.edu/research/" %>,
+      <%= link_to "Harvard University Library", "http://library.harvard.edu/" %>,
+      <%= link_to "Heidelberg University Library", "http://www.ub.uni-heidelberg.de/" %>,
+      <%= link_to "National Gallery of Art Library", "https://library.nga.gov/" %>,
+      <%= link_to "Princeton University Library", "http://library.princeton.edu/" %>,
+      <%= link_to "and University of Illinois at Urbana-Champaign Library", "http://www.library.illinois.edu/" %>.
+      The current partners, excluding the Vatican, collectively hold approximately
+      fifty percent of the corpus of more than five thousand titles and are actively
+      seeking new partners to complete the collection of matching editions.
+    </p>
   </div>
 </section>
