update vatican library website links

--- a/app/views/pages/microfiche_copyright.html.erb
+++ b/app/views/pages/microfiche_copyright.html.erb
@@ -16,8 +16,8 @@
        appropriate Vatican Library order forms. Fees include the cost of the
        reproductions plus the publication rights. For further information, see
        the Vatican Library’s Photographic Reproductions web page at
-       <a href="https://www.vatlib.it/home.php?pag=riproduzioni_fotografiche">
-       https://www.vatlib.it/home.php?pag=riproduzioni_fotografiche</a>.
+       <a href="https://www.vaticanlibrary.va/home.php?pag=riproduzioni_fotografiche">
+       https://www.vaticanlibrary.va/home.php?pag=riproduzioni_fotografiche</a>.
        High-resolution photography is available only through the Vatican Library.</p>
   </div>
 </section>
