--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -3,7 +3,7 @@
     <h1>Charter Partners</h1>
     <p>
       The charter partners in The Digital Cicognara Library initiative include:
-      <%= link_to "Biblioteca Apostolica Vaticana", "https://www.vatlib.it/home.php" %>,
+      <%= link_to "Biblioteca Apostolica Vaticana", "https://www.vaticanlibrary.va/home.php" %>,
       <%= link_to "Columbia University Library", "http://library.columbia.edu/" %>,
       <%= link_to "Frick Art Reference Library", "http://www.frick.org/research/library" %>,
       <%= link_to "Getty Research Institute", "https://www.getty.edu/research/" %>,
