--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <section class="partners" id="partners">
     <ul>
-      <li><a href="https://www.vatlib.it/home.php" target="_blank"><%= image_tag 'vatican.png', alt: 'Biblioteca Apostolica Vaticana', title: 'Biblioteca Apostolica Vaticana' %></a></li>
+      <li><a href="https://www.vaticanlibrary.va/home.php" target="_blank"><%= image_tag 'vatican.png', alt: 'Biblioteca Apostolica Vaticana', title: 'Biblioteca Apostolica Vaticana' %></a></li>
       <li><a href="http://library.columbia.edu/" target="_blank"><%= image_tag 'columbia.png', alt: 'Columbia University Library', title: 'Columbia University Library' %></a></li>
       <li><a href="http://www.frick.org/research/library" target="_blank"><%= image_tag 'frick.png', alt: 'Frick Art Reference Library', title: 'Frick Art Reference Library' %></a></li>
       <li><a href="https://www.getty.edu/research/" target="_blank"><%= image_tag 'getty.png', alt: 'Getty Research Institute', title: 'Getty Research Institute' %></a></li>
