makes faq collapsible, expanded in print css

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -1,4 +1,4 @@
-<section class="partners" id="partners">
+<section class="partners-page" id="partners-page">
   <div class="wrap">
     <h1>Charter Partners</h1>
     <p>
