--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
     <%= favicon_link_tag %>
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic|Cardo|Source+Sans+Pro:400,300,600,700,900' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "application", media: "all" %>
+    <%= stylesheet_link_tag "print", media: "print" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= content_for(:head) %>
