--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -1,6 +1,38 @@
-<section class="partners" id="partners">
+<section class="partners-page" id="partners-page">
   <div class="wrap">
     <h1>Charter Partners</h1>
-    <p>The charter partners in The Digital Cicognara Library initiative include: Biblioteca Apostolica Vaticana, Columbia University Library, Frick Art Reference Library, Getty Research Institute, Harvard University Library, Heidelberg University Library, National Gallery of Art Library, Princeton University Library, and University of Illinois at Urbana-Champaign Library. The current partners, excluding the Vatican, collectively hold approximately fifty percent of the corpus of more than five thousand titles and are actively seeking new partners to complete the collection of matching editions.</p>
+    <p>
+      The charter partners in The Digital Cicognara Library initiative include:
+      <%= link_to "Biblioteca Apostolica Vaticana", "https://www.vaticanlibrary.va/home.php" %>,
+      <%= link_to "Columbia University Library", "http://library.columbia.edu/" %>,
+      <%= link_to "Frick Art Reference Library", "http://www.frick.org/research/library" %>,
+      <%= link_to "Getty Research Institute", "https://www.getty.edu/research/" %>,
+      <%= link_to "Harvard University Library", "http://library.harvard.edu/" %>,
+      <%= link_to "Heidelberg University Library", "http://www.ub.uni-heidelberg.de/" %>,
+      <%= link_to "National Gallery of Art Library", "https://library.nga.gov/" %>,
+      <%= link_to "Princeton University Library", "http://library.princeton.edu/" %>,
+      <%= link_to "and University of Illinois at Urbana-Champaign Library", "http://www.library.illinois.edu/" %>.
+      The current partners, excluding the Vatican, collectively hold approximately
+      fifty percent of the corpus of more than five thousand titles and are actively
+      seeking new partners to complete the collection of matching editions.
+    </p>
   </div>
+  <div class="community-entry">
+    <%= link_to "http://portal.getty.edu/" do %>
+      <%= image_tag("getty_research_portal.png", class: "community-logo") %>
+    <% end %>
+    <p>The <a href="http://portal.getty.edu/">Getty Research Portal</a>, an initiative of the Getty Research
+    Institute, is a free online search platform providing access to an extensive collection of digitized art
+    history texts from a range of art libraries and museums around the world. Begun in 2012, in
+    collaboration with eight international institutions, the Portal is a multilingual and multicultural
+    union catalog that affords art historians and other researchers the ability to search and download
+    complete digital copies of publications devoted to art, architecture, material culture, and related
+    fields. With more than thirty contributing institutions and access to more than 140,000 volumes at
+    present, the project continues to expand its virtual holdings. The Portal also facilitates participation
+    in various database, bibliographic, and digital art history projects such the Digital Cicognara Library.
+    The volumes of the Cicognara Library can be seen within the larger art historical context of the
+    Portal’s expanding collection, which has grown to include not only the foundational literature of
+    western art history but more recently to assemble digitized art historical texts from contributors in
+    Asia, Eastern Europe and Latin America as well.</p>
+</div>
 </section>
