--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag search_action_url, method: :get, class: 'search-query-form clearfix navbar-form flex-search', role: 'search' do %>
+<%= form_tag search_form_action_url, method: :get, class: 'search-query-form clearfix navbar-form flex-search', role: 'search' do %>
   <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
   <div class="input-group">
     <% if search_fields.length > 1 %>
@@ -14,14 +14,14 @@
 
     <span class="input-group">
       <label for="q" class="sr-only"><%= t('blacklight.search.form.search.label') %></label>
-      <%= text_field_tag :q, params[:q], placeholder: t('blacklight.search.form.search.placeholder'), class: "search_q q form-control input-addon-field", id: "q", autofocus: should_autofocus_on_search_box?, data: { autocomplete_enabled: autocomplete_enabled?, autocomplete_path: blacklight.suggest_index_path }  %>
+      <%= text_field_tag :q, params[:q], placeholder: t('blacklight.search.form.search.placeholder'), class: "search_q q form-control input-addon-field", id: "q", autofocus: should_autofocus_on_search_box?, data: { autocomplete_enabled: autocomplete_enabled?, autocomplete_path: blacklight.suggest_index_path } %>
 
       <span class="input-group-btn">
         <button type="submit" class="btn btn-primary search-btn input-addon-item" id="search">
-          <!-- <span class="submit-search-text"><%#= t('blacklight.search.form.submit') %></span> -->
           <span class="glyphicon glyphicon-search"></span>
         </button>
       </span>
     </span>
   </div>
 <% end %>
+
