Minor changes to checklist for Getty

--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -206,9 +206,9 @@
     <ul class="normal-size-text">
       <li>Email attachment</li>
       <li>
-        OAI harvest or API - One-time email with link to OAI or API repository which will be harvested quarterly unless asked otherwise.
+        OAI harvest - One-time email with link to OAI which will be harvested quarterly unless asked otherwise.
       </li>
-      <li>Please email portal@getty.edu if none of the above methods are possible and we will work with you on transmitting files.</li>
+      <li>Please email <%= mail_to "portal@getty.edu" %> if none of the above methods are possible and we will work with you on transmitting files.</li>
     </ul>
   </div>
 </section>
