--- a/app/assets/stylesheets/components/_variables.scss
+++ b/app/assets/stylesheets/components/_variables.scss
@@ -10,6 +10,7 @@ $sans-serif: Helvetica, sans-serif;
 $serif: "Cardo", Georgia, serif;
 $intro-heading: "Playfair Display", Georgia, serif;
 
+$border-radius-base: 4px;
 
 // bootstrap overrides
 $font-family-serif: "Cardo", Georgia, serif;
