--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,13 @@
   <body class="<%= render_body_class %>">
     <%= render partial: 'shared/header_navbar' %>
   <% end %>
-    <%= render partial: 'shared/ajax_modal' %>
+    <%= render partial: 'shared/modal' %>
     <% if current_page?(root_path) %>
       <%= yield %>
     <% else %>
     <div id="main-container" class="<%= container_classes %>">
       <%= content_tag :h1, application_name, class: 'sr-only application-heading' %>
-      <%= render :partial=>'/flash_msg', layout: 'shared/flash_messages' %>
+      <%= render partial: 'shared/flash_msg', layout: 'shared/flash_messages' %>
       <div class="row">
         <%= yield %>
       </div>
