Show all versions of all books (not just the first one)
Show pages are for entries. Entries might have many books. Prior to this
change a show page was only showing content for the first book related
to an entry. This adds more tabs to the viewer selection.

--- a/app/views/catalog/_universal_viewer_default.html.erb
+++ b/app/views/catalog/_universal_viewer_default.html.erb
@@ -2,13 +2,15 @@
   <div class="row">
     <div class="col-md-3">
       <ul class="nav nav-pills nav-stacked" id="manifest-tabs">
-        <% document.book.versions.to_a.each_with_index do |version, index| %>
-          <li <%= 'class="active"'.html_safe if index == 0 %>>
-            <a href="#" data-manifest-uri='<%= version.manifest %>'>
-              <%= version.based_on_original? ? 'Microfiche' : 'Matching Copy' %> (<%= version.book.digital_cico_number %>)<br/>
-              <span class="contrib"><%= version.contributing_library.label %></span>
-            </a>
-          </li>
+        <% document.books.to_a.each_with_index do |book, b_index| %>
+          <% book.versions.to_a.each_with_index do |version, v_index| %>
+            <li <%= 'class="active"'.html_safe if (b_index == 0 && v_index ==0) %>>
+              <a href="#" data-manifest-uri='<%= version.manifest %>'>
+                <%= version.based_on_original? ? 'Microfiche' : 'Matching Copy' %> (<%= book.digital_cico_number %>)<br/>
+                <span class="contrib"><%= version.contributing_library.label %></span>
+              </a>
+            </li>
+          <% end %>
         <% end %>
       </ul>
     </div>
